# crewai-example

./: .dockerignore  .gitignore  .slugignore  .vercelignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  release-tasks.sh  requirements.txt  scheduler-entrypoint.sh  scheduler.sh  vercel.json
.github/workflows/: django.yml  heroku.yml
api/: __init__.py  celery.py  celerybeat_schedule.py  settings.py  urls.py  wsgi.py
news/: langchain.py  models.py  tasks.py  urls.py  views.py
news/crewai/: crew.py  main.py  noticias.py
news/crewai/config/: agents.yml  tasks.yml
news/crewai/tools/: google_search.py
news/management/: __init__.py
news/management/commands/: __init__.py  gerar_noticias.py
news/migrations/: 0001_initial.py  0002_alter_noticia_titulo.py  0003_remove_noticia_titulo.py  0004_alter_noticia_options_remove_noticia_data_publicacao_and_more.py  0005_noticia_data_publicacao.py
newsl-app/api/: settings.py
newsl-app/news/: models.py  views.py
newsl-app/news/crewai/: main.py
static/css/: style.css
templates/: base.html  index.html  landing_page.html
